// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active section change 1`] = `
<BottomPanel
  activeSection="test"
  contributions={
    [
      {
        "create": [Function],
        "id": "testBottomPanel",
        "placement": "bottomPanel",
        "section": "test",
      },
      {
        "create": [Function],
        "id": "mainBottomPanel",
        "placement": "bottomPanel",
      },
      {
        "create": [Function],
        "id": "fooBottomPanel",
        "placement": "bottomPanel",
        "section": "foo",
      },
    ]
  }
>
  <section
    id="tr__bottom-panel"
  >
    <div>
      test
    </div>
    <div>
      Should always be there
    </div>
  </section>
</BottomPanel>
`;

exports[`Active section change 2`] = `
<BottomPanel
  activeSection="other"
  contributions={
    [
      {
        "create": [Function],
        "id": "testBottomPanel",
        "placement": "bottomPanel",
        "section": "test",
      },
      {
        "create": [Function],
        "id": "mainBottomPanel",
        "placement": "bottomPanel",
      },
      {
        "create": [Function],
        "id": "fooBottomPanel",
        "placement": "bottomPanel",
        "section": "foo",
      },
    ]
  }
>
  <section
    id="tr__bottom-panel"
  >
    <div>
      Should always be there
    </div>
  </section>
</BottomPanel>
`;

exports[`One active section with contribution 1`] = `
<section
  id="tr__bottom-panel"
>
  <div>
    test
  </div>
  <div>
    Should always be there
  </div>
</section>
`;

exports[`One active section with contribution and props 1`] = `
<section
  id="tr__bottom-panel"
>
  <div>
    Should always be there
  </div>
  <div
    activeSection="foo"
  >
    Foo section, with props
  </div>
</section>
`;

exports[`active section without contribution 1`] = `
<section
  id="tr__bottom-panel"
>
  <div>
    Should always be there
  </div>
</section>
`;
